a few changes:
 - only update relationships for CellularComponents
 - Handle single/multi attributes properly
 - update message when unable to delete obsolete GO terms
 - update version of reactome-base
 - update .gitignore